--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -2,6 +2,6 @@
 What is the difference between `.then` and `.catch`? What are the similarities?
 
 # Answer
-
+`.then` is for when a promise is fulfilled and `.catch` is for when a promise is rejected. They are both the outcomes of the promise, whether it is fulfilled or rejected.
 
 # Teacher Feedback
