--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -6,6 +6,6 @@ a. calling `resolve()` or `reject()`
 b. calling *and* returning them
 
 # Answer
-
+A; Promise already returns a value so you do not need to explicitly return it.
 
 # Teacher Feedback
