--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -9,6 +9,6 @@ console.log('Outside promise')
 Which prints first: `Inside promise` or `Outside promise`. More importantly, can you explain why?
 
 # Answer
-
+`Outside promise` gets printed first because synchronous code, which console.log() is, gets printed first and then the asynchronous code, such as a Promise.
 
 # Teacher Feedback
