--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -2,6 +2,6 @@
 with `new Promise((resolve, reject) => {...})`, what do the arguments that you pass into `resolve/reject` do?
 
 # Answer
-
+`resolve/reject` are the outcomes of the promise being fulfilled or rejected. For example, if the outcome of a rejected promise is `console.log('error')`, then the outcome of a rejected promise would be `rejected`, which will print `error`.
 
 # Teacher Feedback
