--- a/short-answers/q1.md
+++ b/short-answers/q1.md
@@ -12,3 +12,7 @@ Which prints first: `Inside promise` or `Outside promise`. More importantly, can
 `Outside promise` gets printed first because synchronous code, which console.log() is, gets printed first and then the asynchronous code, such as a Promise.
 
 # Teacher Feedback
+
+Perfect!
+
+Score: 3/3
