--- a/short-answers/q2.md
+++ b/short-answers/q2.md
@@ -5,3 +5,7 @@ What is the difference between `.then` and `.catch`? What are the similarities?
 `.then` is for when a promise is fulfilled and `.catch` is for when a promise is rejected. They are both the outcomes of the promise, whether it is fulfilled or rejected.
 
 # Teacher Feedback
+
+No lie told! However, for similarities, you could have also mentioned that they both take in callback functions!
+
+Score: 2/3
