--- a/short-answers/q3.md
+++ b/short-answers/q3.md
@@ -9,3 +9,7 @@ b. calling *and* returning them
 A; Promise already returns a value so you do not need to explicitly return it.
 
 # Teacher Feedback
+
+Yup!
+
+Score: 3/3
