--- a/short-answers/q4.md
+++ b/short-answers/q4.md
@@ -5,3 +5,7 @@ with `new Promise((resolve, reject) => {...})`, what do the arguments that you p
 `resolve/reject` are the outcomes of the promise being fulfilled or rejected. For example, if the outcome of a rejected promise is `console.log('error')`, then the outcome of a rejected promise would be `rejected`, which will print `error`.
 
 # Teacher Feedback
+
+Yup!
+
+Score: 3/3
